EC-597 - Fixed bug where application hangs during shutdown and receiver tests hang